fix bug on mobile cart

--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -3,6 +3,7 @@
 
     @include mobile() {
         flex-direction: column;
+        margin-bottom: 50px;
     }
 
     &__left {
