--- a/src/sass/_testimonials.scss
+++ b/src/sass/_testimonials.scss
@@ -35,10 +35,6 @@
                 width: 240px;
             }
 
-            @include mobile() {
-                box-shadow: 0px 0px 13px -7px #000;
-            }
-
             &:hover {
                 transform: scale(1.1)
             }
@@ -113,15 +109,16 @@
 
                 @include mobile() {
                     width: 290px;
-                    height: 200px;
+                    min-height: 200px;
                     margin-bottom: 10px;
                 }
             }
 
             @include mobile() {
                 width: 290px;
-                height: 200px;
+                min-height: 200px;
                 margin-bottom: 10px;
+                box-shadow: 0px 0px 13px -7px #000;
             }
         }
     }
